--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -115,7 +115,7 @@ To conclude, we find that negative-charge bias distribution is a feature of sing
 
 In previous work, we studied the relationship of \gls{tmh} composition, sequence complexity and function~\cite{Wong2010, Wong2011, Wong2012} and concluded that simple \gls{tmh}s are more probably responsible for simple membrane anchorage, whereas complex \gls{tmh}s have a biological function beyond just anchorage. We wished to see how the skews observed in this work relate to that classification. Therefore, the single-pass \gls{tmh}s from UniHuman and ExpAll were separated into subsets of simple, twilight, and complex \gls{tmh}s using TMSOC~\cite{Wong2011, Wong2012}. The relative percentages of eight residue types (L, D, E, R, K, Y, W, C\@; normalisation with the total amount of residues of that amino acid type in all sequence segments considered) were plotted along the sequence position for simple and complex helices (Figure 7). Of UniHuman single-pass proteins, there were 889 records with simple \gls{tmh}s and 570 with complex \gls{tmh}s (Figure 7B). In ExpAll, 769 \gls{tmh}s from single-pass proteins were simple \gls{tmh}s and 570 were complex \gls{tmh}s.
 
-It is visually apparent (Figure 7) that there are (i) stronger skews and more inside-outside disparities in simple single-pass TMs than in complex single-pass TMs and (ii) greater similarities between single-pass complex TM regions and those from multi-pass proteins compared with simple single-pass TMs in comparison with either of the other two distributions. To examine the statistical significance of these observations, we compared the amino acid distributions (K, R, K+R, D, E, D+E, Y, W, L, C) across the range of \gls{tmh}s with flank lengths ±10 residues using the \gls{ks}, \gls{kw} and the \({\chi}^{2}\) statistical tests. To note, the \gls{ks} test scrutinises for significant maximal absolute differences between distribution curves; the gls{kw} test is after skews between distributions and the \({\chi}^{2}\) statistical test checks the average difference between distributions. Calculations were carried out over single-pass complex, single-pass simple and multi-pass \gls{tmh} datasets from both ExpAll and UniHuman (for P-values and Bahadur slopes, Table 5 (dataset UniHuman) and Table 6 (dataset ExpAll)).
+It is visually apparent (Figure 7) that there are (i) stronger skews and more inside-outside disparities in simple single-pass \gls{tm}s than in complex single-pass \gls{tm}s and (ii) greater similarities between single-pass complex TM regions and those from multi-pass proteins compared with simple single-pass \gls{tm}s in comparison with either of the other two distributions. To examine the statistical significance of these observations, we compared the amino acid distributions (K, R, K+R, D, E, D+E, Y, W, L, C) across the range of \gls{tmh}s with flank lengths ±10 residues using the \gls{ks}, \gls{kw} and the \({\chi}^{2}\) statistical tests. To note, the \gls{ks} test scrutinises for significant maximal absolute differences between distribution curves; the gls{kw} test is after skews between distributions and the \({\chi}^{2}\) statistical test checks the average difference between distributions. Calculations were carried out over single-pass complex, single-pass simple and multi-pass \gls{tmh} datasets from both ExpAll and UniHuman (for P-values and Bahadur slopes, Table 5 (dataset UniHuman) and Table 6 (dataset ExpAll)).
 
 Many low P-values in Tables 5 and 6 indicate significant differences between the three distributions studied. For the UniHuman dataset (Table 5), we find most striking, significant differences between charged residue distributions (R, K, D, E) of simple and complex single-pass \gls{tmh}+flank regions (\({\chi}^{2}\) P-value<2.23e-3 for single amino acid types). Similarly, simple single-pass \gls{tmh}+flank segments differ significantly from multi-pass \gls{tmh}+flank segments (\gls{kw} test P-values<3.e-2 for R, K, D, E, Y, W amino acid types as well as for K+R and D+E). The trends are the same for the ExpAll dataset (Table 6): simple and complex single-pass \gls{tmh}+flank regions differ in charged amino acid type distributions (\({\chi}^{2}\) P-value<4.21e-3 for all cases), as well as simple single-pass and multi-pass ones, do (\gls{kw} test P-values<5.e-2 for R, D, E, Y, W amino acid types and D+E).
 
@@ -144,10 +144,12 @@ Whereas the influence of a negative charge bias in engineered proteins with TM r
 
 Generally speaking, the datasets from previous studies have been considerably smaller compared with those in our work (only Sharpe \textit{et al.} had a similar order of magnitude~\cite{Sharpe2010}), especially those with experimental information about 3D structure and membrane topology that we used for validation. And they might not have had the luxury of using UniProt’s improved TRANSMEM consensus annotation based on a multitude of TM prediction methods and experimental data, but this is also not the major issue. We found that there are other factors that are critical for observing sequence bias such as negative charge skew in the case of \gls{tmh}s.
 
-(i) Acidic residues are rare near and within \gls{tmh} and biases in their distribution are easily blurred by minor fluctuations of much more frequent amino acid types, most notably leucine. Therefore, the method of normalisation is critical. We have shown that normalising by the total amount of residues of the amino acid type studied within the sequence region under consideration is appropriate to answer the question where to find a negatively charged residue if there is any at all (called “relative percentage” in this work).
-(ii) The alignment of the \gls{tmh}s is critical. It was common practice to align \gls{tmh} according to the most cytosolic residue~\cite{Sharpe2010} although it is known that the membrane/cytosol boundary of the \gls{tmh} is not well defined (and the exact boundary is even less well understood at the non-cytosolic side). Aligning the TM regions and their flanks from the center of the \gls{tmh} was first proposed by Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013}. Since we know now that acidic residues are often suppressed in the cytosolic flank and within the \gls{tmh}, this implies that the few acidic residues found in the cytosolic interface would appear more comparable to those in the poorly defined non-cytosolic interface as the respective residues are spread over more potential positions, diminishing any observable bias.
-(iii) We find that separation into single- and multi-pass TM datasets (or, even better, simple and complex \gls{tmh}s~\cite{Wong2011, Wong2012}) is critical to study the inside/outside bias. As many \gls{tmh}s in multi-pass \gls{tmp}s have essentially no flanks or very short flanks if the condition of non-overlap is applied to flanks of neighbouring \gls{tmh}s, this might also obscure the observation of the negative charge bias. If there are no flanks, then there will be no residue distribution bias in these flanks. The problem can be alleviated by either studying only subsets with minimal flank lengths on both sides (although datasets might become too small for statistical analysis) or by allowing flank overlaps between neighbouring \gls{tmh}s.
-(iv) This classification is even more justified in the light of previous reports about the “missing hydrophobicity” in multi-pass \gls{tmh}s~\cite{Nilsson1990, Hedin2010, Hessa2007, Ojemalm2012}. Otherwise, the distribution bias well observed among the exclusive anchors could be lost to noise.  This addresses the more biologically contextualised issue that there are different evolutionary pressures on different types of \gls{tmh}s. The negative charge skew is most pronounced for dedicated anchors frequently found with simple \gls{tmh}s typically observed in single-pass TM proteins. These \gls{tmh}s are pressured to exhibit residue biases that may aid anchorage in a topologically correct manner. Complex \gls{tmh}s, typically within multi-pass membrane proteins that have a function beyond anchorage, comply with a multitude of restraints structural and functional constraints and the negative charge skew is just one of them.
+\begin{enumerate}[i]
+  \item Acidic residues are rare near and within \gls{tmh} and biases in their distribution are easily blurred by minor fluctuations of much more frequent amino acid types, most notably leucine. Therefore, the method of normalisation is critical. We have shown that normalising by the total amount of residues of the amino acid type studied within the sequence region under consideration is appropriate to answer the question where to find a negatively charged residue if there is any at all (called “relative percentage” in this work).
+  \item The alignment of the \gls{tmh}s is critical. It was common practice to align \gls{tmh} according to the most cytosolic residue~\cite{Sharpe2010} although it is known that the membrane/cytosol boundary of the \gls{tmh} is not well defined (and the exact boundary is even less well understood at the non-cytosolic side). Aligning the TM regions and their flanks from the center of the \gls{tmh} was first proposed by Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013}. Since we know now that acidic residues are often suppressed in the cytosolic flank and within the \gls{tmh}, this implies that the few acidic residues found in the cytosolic interface would appear more comparable to those in the poorly defined non-cytosolic interface as the respective residues are spread over more potential positions, diminishing any observable bias.
+  \item We find that separation into single- and multi-pass TM datasets (or, even better, simple and complex \gls{tmh}s~\cite{Wong2011, Wong2012}) is critical to study the inside/outside bias. As many \gls{tmh}s in multi-pass \gls{tmp}s have essentially no flanks or very short flanks if the condition of non-overlap is applied to flanks of neighbouring \gls{tmh}s, this might also obscure the observation of the negative charge bias. If there are no flanks, then there will be no residue distribution bias in these flanks. The problem can be alleviated by either studying only subsets with minimal flank lengths on both sides (although datasets might become too small for statistical analysis) or by allowing flank overlaps between neighbouring \gls{tmh}s.
+  \item This classification is even more justified in the light of previous reports about the “missing hydrophobicity” in multi-pass \gls{tmh}s~\cite{Nilsson1990, Hedin2010, Hessa2007, Ojemalm2012}. Otherwise, the distribution bias well observed among the exclusive anchors could be lost to noise.  This addresses the more biologically contextualised issue that there are different evolutionary pressures on different types of \gls{tmh}s. The negative charge skew is most pronounced for dedicated anchors frequently found with simple \gls{tmh}s typically observed in single-pass TM proteins. These \gls{tmh}s are pressured to exhibit residue biases that may aid anchorage in a topologically correct manner. Complex \gls{tmh}s, typically within multi-pass membrane proteins that have a function beyond anchorage, comply with a multitude of restraints structural and functional constraints and the negative charge skew is just one of them.
+\end{enumerate}
 
 The most representative precedent papers are those of Sharpe \textit{et al.}~\cite{Sharpe2010} from 2010 (with 1192 human and 1119 yeast single-pass \gls{tmh}s), Baeza-Delgado \textit{et al.}~\cite{Baeza-Delgado2013} (with 792 \gls{tmh}s mixed from single- and multi-pass gls{tmp}s) and Pogozheva \textit{et al.}~\cite{Pogozheva2013} (\gls{tmh}s from 191 mixed from single- and multi-pass \gls{tmp}s with structural information) both from 2013. Whereas the first analysis would have benefitted from the central alignment approach and the first two studies from another normalization as described above, the third study did come close to our findings. To note, their dataset mixed with single- and multi-pass proteins was too small for revealing the negative charge bias with significance; yet, they observed total charge differences at either sides of the membrane varying for both single- and multi-pass proteins. Membrane asymmetry due to positively charged residues occurring more frequently on the cytosolic side causes net charge unevenness at both sides of the membrane. This observation has been known to correlate with orientation for decades~\cite{VonHeijne1989, Baeza-Delgado2013, Meindl-Beinker2006}. Our data shows that the negative charge skew contributes to this asymmetry.
 
@@ -161,7 +163,7 @@ Several sequence features can be assigned to anchor \gls{tmh}s: Charged-residue 
 
 We investigated the difference between \gls{tmh}s from single-pass and multi-pass proteins and found significant differences in sequence composition that are reflective of the biologically different roles the \gls{tmh}s play. To emphasise and validate these findings, we separated \gls{tmh}s from single-pass proteins into simple and complex \gls{tmh}s~\cite{Wong2011, Wong2012}; ones that likely contains mostly \gls{tmh}s that act as exclusive anchors, and another that have roles beyond anchorage. This leaves us with ``anchors'' (simple \gls{tmh}s from single-pass proteins) and “non-anchors” (complex \gls{tmh}s from single-pass proteins, and \gls{tmh}s from multi-pass proteins). If there are strong sequence feature differences between anchors and non-anchors, it is likely that the sequence feature has a role in satisfying membrane constraints to act as an energetically optimally stable anchor.
 
-Future studies in the area would desirably directly include a comprehensive analyses of datasets oligomerised \gls{tmh}s from single-pass proteins and ascertain if they appear to be more similar to simple anchors, multi-pass, or generally neither. Currently, no sufficiently complete set of intra-membrane oligomerised single-pass proteins exists that can be compared to a large set of known non-oligomerising proteins. The current work sidesteps this issue by comparing single-pass proteins with simple \gls{tmh}s, which tend to be simple anchors (as shown in previous work~\cite{Wong2011, Wong2012}), against datasets that contain \gls{tmh}s that will form intra-membrane bundles. Bluntly, the simple/complex status of a \gls{tmh} can be easily computed from its sequence with TMSOC whereas the oligomerization state of most membrane proteins still needs to be experimentally determined.
+Future studies in the area would desirably directly include a comprehensive analyses of datasets oligomerised \gls{tmh}s from single-pass proteins and ascertain if they appear to be more similar to simple anchors, multi-pass, or generally neither. Currently, no sufficiently complete set of intra-membrane oligomerised single-pass proteins exists that can be compared to a large set of known non-oligomerising proteins. The current work sidesteps this issue by comparing single-pass proteins with simple \gls{tmh}s, which tend to be simple anchors (as shown in previous work~\cite{Wong2011, Wong2012}), against datasets that contain \gls{tmh}s that will form intra-membrane bundles. Bluntly, the simple/complex status of a \gls{tmh} can be easily computed from its sequence with TMSOC whereas the oligomerisation state of most membrane proteins still needs to be experimentally determined.
 
 Unsurprisingly, both positively and negatively charged residues can be seen to be more strongly distributed with bias in anchors than non-anchors. Both the “positive-inside” rule as well as the “negative-outside/non-negative-inside” bias are mostly observable in simple single-pass \gls{tmh}s (although they are statistically significant elsewhere). It is perhaps true that where a bias is clearly present in both non-anchors and anchors alike, it is a strong topological determinant, whereas if the residue is only distributed with topological bias in exclusively anchoring \gls{tmh}s, we can attribute these features more specifically to biophysical anchorage. This being said, we should not rule out that the same features aid topological determination since negative charge has been shown to be a weaker topological determinant than positively charged residues (35).
 
@@ -175,20 +177,95 @@ To conclude, the large fraction of functionally uncharacterised genomic sequence
 
 \section{Methods}
 
-\subsection{Normalisation}
+\subsection{Datasets}
+\subsubsection{Databases.}
+All datasets used for analysis are listed in Table 1. Transmembrane protein sequences and annotations were taken from TOPDB [50] and UniProt [49]. UniProt derived datasets are the most comprehensive datasets built with (i) robust transmembrane prediction methods providing the limit of today’s achievable accuracy with regard to hydrophobic core localization and (ii) subcellular location annotation that can be used for orientation determination. However, they mostly rely on predicted transmembrane regions. TOPDB has meticulous experimental verifications of the orientation from the literature that are independent of prediction algorithms [50]. Unfortunately, this dataset is much smaller with too few entries to have it divided with regard to taxonomy or subcellular locations.
 
-\begin{equation}
-c_r=\frac{(a_{K,r}+a_{R,r})-(a_{D,r}+a_{E,r})}{N}
-\end{equation}
+UniProt database files were downloaded by querying the server for different taxonomic groups as well as different subcellular membrane locations; UniHuman (human representative proteome), UniCress (Arabidopsis thaliana, otherwise known as mouse eared cress, representative proteome), UniER (human endoplasmic reticulum representative proteome), UniPM (human plasma membrane representative proteome), UniGolgi (human Golgi representative proteome). To enforce a level of quality control, the queries were restricted to manually reviewed records and transmembrane proteins with manually asserted TRANSMEM annotation[49]. Proteins were then sorted into multi-pass and single-pass groups according to having more than one or exactly one TRANSMEM region respectively. TRANSMEM regions are validated by either experimental evidence[49], or according to a robust transmembrane consensus of the predictors TMHMM [23], Memsat  [80], Phobius [21,22] and the hydrophobic moment plot method of Eisenberg and co-workers[54]. TMHs and flanking regions were oriented according to UniProt TOPO\textunderscore DOM annotation according to the keyword “cytoplasmic”. If a “cytoplasmic” TOPO\textunderscore DOM was found in the previous TOPO\textunderscore DOM relative to the TRANSMEM region then the sequence remained the same. If “cytoplasmic” was found in the next TOPO\textunderscore DOM, relative to the TRANSMEM section then the sequence was reversed. Proteins without the “cytoplasmic” keyword in their TOPO\textunderscore DOM annotation were omitted from further analysis.
 
+The TOPDB database[50] is a manually curated database composed of experimental records from the literature that allow determination of the protein topology. Experiments include fusion proteins, posttranslational modifications, protease experiments, immunolocalization, chemical modifications as well as revertants, sequence motifs with known mandatory membrane-embedded topologies, and tailoring mutants (Supplementary Table S1). Length cut-offs for the TMH were set at 16 as the shortest length and 38 as the longest.
+
+The following datasets are used throughout this work:
+ExpAll. TOPDB contained 4190 manually annotated transmembrane proteins at the time of download[50]. CD-HIT[81] identified 3857 representative sequences using sequence clusters of >90% sequence identity. This choice of similarity threshold was chosen since CD-HIT ultimately underlies the clustering behind UniRef. Unlike the other datasets, which by definition contain reasonably typical TMHs, many of the transmembrane segments annotated in TOPDB are extremely short or long and this would cause severe unrealistic hydrophobic mismatches. Especially, the short segments could be the result of miss-annotation, TMHs broken into pieces due to kinks or segments that peripherally insert only into the interface of the membrane bilayer. To remove the atypical lengths, cut-offs were set at 16 as the lower cut-off and 38 as the upper cut-off after inspecting the length histogram. We found that, for the single-pass TMHs in TOPDB, 1215 out of 1544 are within the length limits (78.7%). Among the 17141 multi-pass TMHs, we find 15563 within our global length limits (from 2205 TOPDB records corresponding to 2281 UniProt entries). This removed 1578 very short TMHs and none of the long TMHs. Our cut-off selection is very similar to the one by Baeza-Delgado etal.[13].
+
+To get an idea of the taxonomical breakdown in the ExpAll dataset, the UniProt ID tags were extracted and mapped to UniProtKB. The combined dataset of multi-pass (single-pass) proteins was mapped to 1288 (1343) eukaryotic records, 404 (776) of which were human records, 926 (191) bacterial records, 46 (5) archaea records, and 14 (22) viral records.
+
+UniHuman. This is a set of mostly human TMH-containing proteins or their close mammalian homologues. UniProtKB contains 5187 human protein records that are manually annotated with TRANSMEM regions (query = “annotation:(type:transmem) AND reviewed:yes AND organism:"Homo sapiens (Human) [9606]" AND proteome:up000005640”. To reduce sequence redundancy, these sequences were submitted to UniRef90[82]. To note, Uniref90 was chosen over Uniref50 to maintain a viable size of datasets for statistical analysis of occurrence of negatively charged residue, which are very rare in the vicinity of TMHs. 5015 UniRef90 clusters represented the 5187 sequences. A list of sequences representing those clusters was submitted back to UniProtKB resulting and 5014 representative entries were recovered. There is a small issue in that the list of representatives from UniRef includes non-canonical isoforms, while the batch retrieve query of UniProtKB only supports complete entries, i.e. canonical isoforms. This resulted in the loss of one record at this point is due to two splice isoforms acting as representative identifiers. Of those 5014 records, 4714 were records from human entries, 197 were from mice, 94 from rats, 5 from bovine, 2 from chimps, 1 from Chinese hamsters, and 1 from pigs. Although the TMH length variations within the UniHuman dataset are much smaller than for ExpAll, we applied the same length cut-offs for the sake of comparability. Out of the 1709 single-pass cases, 1705 entered the final dataset. Of those, 1596 were from human records, 87 were from mouse, 19 were from rat, and 2 were from chimpanzee. Among the 12390 multi-pass TMHs, 12353 were included into UniHuman. The other, multi-pass record identifiers were mapped to 1789 UniProtKB entries. 1660 of these were human entries, 63 from rat, 61 from mouse, 4 from bovine, and 1 from Chinese hamster. This clustered human dataset was then queried for subcellular locations to make the UniER, UniGolgi, and UniPM datasets (detailed below).
+
+UniER. The clustered UniHuman dataset was queried using UniProtKB for endoplasmic reticulum subcellular location (locations:(location:"Endoplasmic reticulum [SL-0095]" evidence:manual)). This returned 487 protein entries, 457 of which belonged to human, 24 to mouse and 6 to rat. 287 of these records contained sufficient annotation for orientation determination. 132 were single-pass entries of which 120 records were from humans, 11 from mouse, and 1 from rat. 155 were multi-pass entries containing 898 transmembrane helices. 144 were records from human, 8 were from mouse and 3 were from rat.
+
+UniGolgi. The clustered human dataset was queried using UniProtKB for Golgi subcellular location (locations:(location:"Golgi apparatus [SL-0132]" evidence:manual)). This returned 323 protein entries, 301 of which belonged to human, 19 to mice, 2 to rat and 1 to pig. 269 of these records contained sufficient annotation for orientation determination. 206 were single-pass entries of which 195 records were from human, 9 from mouse, and 1 from rat. 61 were multi-pass entries containing 383 transmembrane regions. 54 were records from human, 6 were from mouse and 1 was from rat.
+
+UniPM. The clustered human dataset was queried using UniProtKB for the cell membrane subcellular location (locations:(location:"Cell membrane [SL-0039]" evidence:manual)). This returned 1036 protein entries, 948 of which belonged to humans, 62 to mice, and 26 to rats. 920 of these records contained sufficient annotation for orientation determination. 493 were single-pass entries of which 451 records were from human, 37 from mouse, and 5 from rat. 427 were multi-pass entries containing 3079 transmembrane regions. 394 were records from human, 17 were from mouse and 16 were from rat.
+
+UniCress. For the mouse ear cress, a representative proteome dataset was acquired with the query annotation:proteomes:(reference:yes) AND reviewed:yes AND organism:"Arabidopsis thaliana (Mouse-ear cress) [3702]" AND proteome:up000006548. This returned 3174 records in UniProtKB. UniRef90 identified 3111 clusters. 3110 of the representative sequences were mapped back to UniProtKB. Of those, 3090 were from Arabidopsis thaliana, 2 from Hornwort, 1 from cucumber, 1 from tall dodder, 1 from soybean (Glycine max), 2 from Indian wild rice, 2 from rice, 2 from garden pea, 1 from potato, 4 from spinach, 1 from Thermosynechococcus elongatus (thermophilic cyanobacteria), 1 from wheat, and 2 from maize. Of those there were 1146 with suitable TOPO\textunderscore DOM annotation for topological orientation determination. 632 of those records were identified as single-pass, all of which were from Arabidopsis thaliana. 507 protein records were from multi-pass records, which contained 3823 transmembrane helices. 506 of those records were from Arabidopsis thaliana, whilst 1 was from Thermosynechococcus elongatus.
+
+UniFungi. For the Fungi dataset, the query “annotation:(type:transmem) taxonomy:"Fungi [4751]" AND reviewed:yes” was used. This returned 5628 records that were submitted to Uniref90. Uniref90 identified 4934 representative records, all of which were successfully mapped back to UniProtKB. Of those, 2070 had suitable annotation for orientation. 1990 records belonged to Ascomycota including 1243 Saccharomycetales. 73 were Basidomycota, and 6 were Apansporoblastina. 729 records contained a single TMH region, 702 of which belonged to Ascomycota, 26 to Basidomycota and one to Encephalitozoon cuniculi, a Microsporidium parasite. 8698 helices were contained in 1338 records of multi-pass proteins. Of these records 1285 were Ascomycota, 47 were Basidomycota, and 5 were Apansporoblastina. One TMH from UniFungi was discounted from P32897 due to an unknown position.
+
+UniEcoli. This dataset was generated by querying UniProt with “reviewed:yes AND organism:”Escherichia coli (strain K12)[83333]”” which returned 941 hits. The hits were submitted to Uniref90, which returned 935 clusters. The representative IDs were then resubmitted to UniProtKB, all of which returned successfully. 934 were from Bacteria, whilst one were from lambdalike viruses. Of the bacterial records, 862 were from various Escherichia species of which 565 were from E. coli strain K12, 28 were from Salmonella choleraesuis, 25 were from Shigella and the rest all also fell under Gammaproteobacteria class. This dataset contains 54 single-pass proteins and 3888 helices from 529 multi-pass proteins with sufficient annotation for topological determination.
+
+UniBacilli. The Bacilli dataset was constructed by querying UniProt for “reviewed:yes AND taxonomy:”Bacilli””. This returned 5044 records, which were submitted to Uniref90. 2,591 clusters were found in Uniref from these records. The representative IDs were successfully resubmitted to UniProtKB. 2031 of these were of the genus Bacillales whilst 560 were also of the genus Lactobacillales. This dataset contains 124 single-pass proteins and 822 helices from 140 multi-pass proteins.
+
+UnArch. The Archaea dataset was constructed by querying UniProt for “reviewed:yes AND taxonomy:”Archaea [2157]””. This returned 1,152 records, which were submitted to Uniref90. 1,054 clusters were found in Uniref from these records. The representative IDs were successfully resubmitted to UniProtKB. 946 records belonged to the Euyarchaeota, 101 to Thermoprotei, 4 to Thaumarchaeota, and 3 to Korarchaeum cryptofilum. This dataset contains 48 single-pass proteins and 59 multi-pass proteins containing 327 helices from 59 proteins.
+
+To note, we are aware that proteome datasets are a moving target that have dramatically changed over the years and, probably, will continue to do so to some extent in the future[83]. Yet, we think that currently available protein sequence sets are sufficiently good for the purpose as we search for statistical properties in the TMH context only.
+
+\subsection{On the determination of flanking regions for TMHs and the TMH alignment}
+
+The determination of the boundary point at the sequence between the TMH in a membrane and the sequence immersed in the cytoplasm, extracellular space, vesicular lumen, etc. is not that trivial as it initially appears. There is a lot of dynamics in the TMH positioning and the actual boundary point will be represented by various residues at different time points. Whilst the TMH core region detection from a sequence is trivial with modern software, the exact determination of TMH boundaries remains difficult since it is unclear exactly how far in or out of the membrane a given helix extends[84]. Previous studies have dealt with this issue in various ways[9,13,16,85].
+
+Here in this work, we explore two boundary definitions. First, we assign TMH boundary locations as described in the respective databases. These flanks are the ones that are reported in our TMH data files that are available at the WWW-site associated with this paper. We studied flank lengths of ±5, ±10, and ±20 residues preceding and following the inside and outside TMH boundaries. In these cases, the flanks are aligned relative to the residue closest to the TMH.
+
+In cases where the loops before and after the TMH are shorter than the predefined flank lengths, further precautions are necessary. In the multi-pass datasets particularly (Figure S4, Table S1), the flanks overlap with other membrane region flanks. We explore several variants. On the one hand, we work with data files where the flank residue stretches are equally truncated so that no overlap occurs. If the loop length was uneven, the central odd residue was not included into any flank. We find surprisingly, that a large number of TMH has no or just a super-short flank, a circumstance that should disturb any statistical analysis due to the absence of objects. Therefore, we also work with alternative datasets (i) with flanks overlapping between consecutive TMH (e.g., in Table 3B; yet, it leads to some residues being counted more than one time) as well as (ii) with subsets of the data where the flanks at both sides have a defined minimal length (50% or 100% of the required flanks; unfortunately, some of them become too small for analysis).
+
+The problem of flanks overlapping does affect also some single-pass and multi-pass TMH proteins with INTRAMEM regions as described in some UniProt entries. We do not include INTRAMEM regions in the datasets as TMHs but, sometimes, the flanking regions of TMHs were truncated to avoid overlap with INTRAMEM flanking regions (Supplementary Table S2).  The identifiers affected for single-pass TMH proteins are Q01628, P13164, Q01629, Q5JRA8, A2ANU3 (UniHuman), P13164, Q01629, A2ANU3 (UniPM) and Q5JRA8 (UniER).
+
+The second form of boundary point definition for flank determination was achieved with gaplessly aligning all TMHs relative to their central residue at the position equal to half the length of the TMHs at either side. Though there is some length variation among TMHs, most of them are centred around a length of 20-22 residues. In this case, flanks are the sequence extensions beyond the standardised-length 21-residues TMHs. We define the inside flanking segments as the positions -20 to -10 and the outside flanking regions to be +10 to +20 from the central TMH residue (with the label “0”). Instead of emphasizing some artificially selected boundary residue, this definition allows the average TMH boundary transition to become apparent.
+
+\subsection{Separating simple and complex single-pass helices.}
+
+Single-pass helices from ExpAll and UniHuman datasets helices were split into two groups: simple and complex following a previously described classification[6,7] to roughly distinguish simple hydrophobic anchors and TMHs with additional structural/functional roles. Simple and complex helices were determined using TMSOC[7]. The complexity class is determined by calculating the hydrophobicity and sequence entropy. The resulting coordinates cluster with anchors being more hydrophobic and less complex whilst more complex and more polar TMHs are associated with non-anchorage functions. In UniHuman there were 889 simple helices and 570 complex TMHs. In ExpAll there were 769 simple helices and 570 complex helices.
+
+\subsection{Distribution normalisation}
+
+In this work, we have used normalisation techniques described in previous investigations as well as new approaches designed to more sensitively identify biases of rare residues. Baeza-Delgado and co-workers used LogOdds normalisation column-wise in TMH alignments. Critically, this is based on their definition of probability, which takes into account the total number of amino acids in the dataset as a denominator[13]. Since aliphatic residues such as leucine and other highly abundant slightly polar residues dominate the denominator, the distribution of the rare acidic residues will be easily lost in the “background noise” of those highly abundant residues. Pogozheva and co-workers used two approaches, (i) the total accessible surface area (ASAtotal) and (ii) total number of charged residues (Ntotal) as a denominator in their distribution normalisation[16].
+
+In this work, two methods for measuring residue occurrence in the TMH and its flanks were used. Similarly to previous work, we compute the occurrence  of an amino acid type  at a certain sequence position  in a set of aligned sequences TMHs and their flanks. Following[9], the absolute relative occurrence  of this amino acid type at the sequence position  is then given by equation (1) as
+.	(1)
 
 \begin{equation}
   p_{i,r}=\frac{a_{i,r}}{\underset{r}{\max}{(a_r)}}
 \end{equation}
 
+
+Here, the denominator is the maximal number of all residues in any alignment column (i.e., the number of sequences in the alignment) and, to emphasise, this will make  mostly dependent on the most abundant residue types. This type of normalization reveals the most preferred residue types at given sequence positions.
+
+ \begin{equation}
+   q_{i,r}=\frac{{100}\cdot{a_{i,r}}}{a_i}
+ \end{equation}
+
+Our second normalization method is independent of the abundance of any amino acid types other than the studied one; it answers the question: “If there is a residue of type  in the TMH-containing segment, where would it most likely be?” This relative occurrence  calculated in equation (2) as
+.	(2)
+The value  is the total abundance of residues of just amino acid type  in a given alignment of TMH-containing segments (i.e., in the TMH together with its two adjoining flanks summed over all cases of TMHs in the given dataset). Peaks in as function of r reveal the prefered positions of residues of type i. The difference in   and   normalisation is visualised in Figure S3.
+
+\subsection{Hydrophobicity calculations}
+
+Hydrophobicity profiles were calculated using the Kyte \& Doolittle hydrophobicity scale[52] and validated with the Eisenberg scale[54], the Hessa biological scale[36], and the White and Wimley whole residuescale [53] (Figure S1). The hydrophobicity profile uses un-weighted windowing of the residue hydrophobicity scores from end to end of the TMD slice. Three residues were used as full window lengths and partial windows were permitted.
+
+\subsection{Normalised net charge calculations}
+
+Charge was calculated at each position by scanning through each position of the transmembrane helices and flanking regions and subtracting one from the position if an acidic residue (D or E) was present, or adding one if a positively charged residue (K or R) was present. The accumulative net-charge  was then divided by the total number  of transmembrane helices that were used in calculating the accumulative net-charge. Thus, the charge distribution is calculated by:
+(3)
+
+
 \begin{equation}
-  q_{i,r}=\frac{{100}\cdot{a_{i,r}}}{a_i}
+c_r=\frac{(a_{K,r}+a_{R,r})-(a_{D,r}+a_{E,r})}{N}
 \end{equation}
 
-\section{Results}
-\subsection{Biophysicochemical differences in multi-pass and single-pass helices}
+\subsection{statistics}
+
+The inside/outside bias of negative residues was quantified by computing the independent Kruskal-Wallis and the 2-sample t-test statistical method from the Python scipy stat package v0.15 python package (\texttt{https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.kruskal.html, https://docs.scipy.org/doc/scipy-0.15.0/reference/generated/scipy.stats.ttest\textunderscore ind.html}). This test answers the question whether two means are actually different in the statistical sense. For the leucine residues, each TMH region was divided into two sections, representing the inner and outer leaflets (Table 4).  For the hydrophobicity plot, 3 window values of hydrophobicity were taken for each TMH at each position. The statistical analyses were separately performed for single-pass and multi-pass transmembrane proteins. At each position, the two groups were compared using the Kruskal-Wallis test.
+
+The zero hypothesis of homogeneity of two distributions was examined with the \gls{ks}, the \gls{kw} and the \({\chi}^{2}\) statistical tests. To note, the \gls{ks} test scrutinises for significant maximal absolute differences between distribution curves; the \gls{kw} test is after skews between distributions and the \({\chi}^{2}\) statistical test checks the average difference between distributions. As the statistical significance value (“P‑value”) is a strong function of N, the total amount of data used in the statistical test, we rely on the (absolute) Bahadur slope (B) as a measure of distance between two distributions[55-57]:
+ 	(4)
+The larger the absolute Bahadur slope, the greater the difference between the two distributions.
